--- a/CorujaPresentation/Views/Conta/Cadastro.cshtml
+++ b/CorujaPresentation/Views/Conta/Cadastro.cshtml
@@ -3,199 +3,221 @@
     ViewBag.Title = "Cadastro";
 }
 
+<!-- CADASTRO	================================= -->
+<section id="Cadastro" class="section section-gray">
+
+    <div class="container">
 
 
-<h2>@ViewBag.Title.</h2>
+        <h2 class="section-heading text-center">Conta Coruja</h2>
 
-@using (Html.BeginForm("Cadastro", "Conta", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Nova Conta Coruja</h4>
-    <hr />
-   
-    // Add new properties here:
-
-    <div class="form-group">
-        @Html.LabelFor(m => m.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(m => m.FirstName, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(m => m.FirstName, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(m => m.LastName, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(m => m.LastName, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(m => m.LastName, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.BirthDate, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.BirthDate, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.BirthDate, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(m => m.Cpf, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(m => m.Cpf, new { htmlAttributes = new { Id = "Cpf", @class = "form-control" } })
-            @Html.ValidationMessageFor(m => m.Cpf, "", new { @class = "text-danger" })
-        </div>
-    </div>
+        <div class="row centered-form">
 
     
-    <div class="form-group">
-        @Html.LabelFor(m => m.Rg, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(m => m.Rg, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(m => m.Rg, "", new { @class = "text-danger" })
-        </div>
-    </div>
+            <div class="col-xs-12 col-sm-8 col-md-4 col-sm-offset-2 col-md-offset-4">
 
-    <div class="form-group">
-        @Html.LabelFor(m => m.Graduation, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(m => m.Graduation, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(m => m.Graduation, "", new { @class = "text-danger" })
-        </div>
-    </div>
+             
+                <div class="panel panel-default">
 
-    <div class="form-group">
-        @Html.LabelFor(m => m.Cep, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(m => m.Cep, new { htmlAttributes = new { Id = "Cep", @class = "form-control" } })
-            @Html.ValidationMessageFor(m => m.Cep, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(m => m.Address, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(m => m.Address, new { htmlAttributes = new { Id = "Address", @class = "form-control" } })
-            @Html.ValidationMessageFor(m => m.Address, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(m => m.AddressNumber, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(m => m.AddressNumber, new { htmlAttributes = new { Id = "AddressNumber", @class = "form-control" } })
-            @Html.ValidationMessageFor(m => m.AddressNumber, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    
-    <div class="form-group">
-        @Html.LabelFor(m => m.Nhood, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(m => m.Nhood, new { htmlAttributes = new { Id = "Nhood", @class = "form-control" } })
-            @Html.ValidationMessageFor(m => m.Nhood, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(m => m.City, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(m => m.City, new { htmlAttributes = new { Id= "City", @class = "form-control" } })
-            @Html.ValidationMessageFor(m => m.City, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(m => m.State, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(m => m.State, new { htmlAttributes = new { Id = "State", @class = "form-control" } })
-            @Html.ValidationMessageFor(m => m.State, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(m => m.Country, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(m => m.Country, new { htmlAttributes = new { Id = "Country", @class = "form-control" } })
-            @Html.ValidationMessageFor(m => m.Country, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(m => m.NewsLetter, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(m => m.NewsLetter, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(m => m.NewsLetter , "", new { @class = "text-danger" })
-            @Html.CheckBox("ReceiveNewsletter",true) 
-            <label for="ReceiveNewsletter" style="display:inline">Receive Newsletter?</label>
-        </div>
-    </div>
-
-    /////////////////////////////////
-
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(m => m.Email, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(m => m.PhoneNumber, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(m => m.PhoneNumber, new { htmlAttributes = new { @class = "form-control"} })
-            @Html.ValidationMessageFor(m => m.PhoneNumber, "", new { @class = "text-danger" })
-        </div>
-    </div>
+                    <div class="panel-heading">
+                        <h3 class="panel-title text-center">Nova Conta</h3>
+                    </div>
 
 
+            
 
-    // new property
+                    <div class="panel-body">
 
-    <div class="form-group">
-        @Html.LabelFor(m => m.CellPhoneNumber, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(m => m.CellPhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(m => m.CellPhoneNumber, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    ///////////////////////////////////
-
-    <div class="form-group">
-        @Html.LabelFor(m => m.Password, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(m => m.Password, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(m => m.ConfirmPassword, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })
-        </div>
-    </div>
-    
-  
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Criar conta" />
-        </div>
-    </div>
+                        @using (Html.BeginForm("Cadastro", "Conta", FormMethod.Post, new { @class = "", role = "form" }))
+                        {
+                            @Html.AntiForgeryToken()
 
 
-    
+                            <div class="col-xs-6">
+
+                                <div class="form-group">
+
+                                    @Html.EditorFor(m => m.FirstName, new { htmlAttributes = new { @class = "form-control input-sm", placeholder = "Nome" } })
+                                    @Html.ValidationMessageFor(m => m.FirstName, "", new { @class = "text-danger" })
+
+                                </div>
 
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-    @Scripts.Render("~/bundles/inputmask")
-      
+                               <div class="form-group">
 
-<script type="text/javascript">
+
+                                    @Html.EditorFor(m => m.LastName, new { htmlAttributes = new { @class = "form-control", placeholder = "Sobrenome" } })
+                                    @Html.ValidationMessageFor(m => m.LastName, "", new { @class = "text-danger" })
+
+                                </div>
+
+                                <div class="form-group">
+
+
+                                    @Html.EditorFor(model => model.BirthDate, new { htmlAttributes = new { @class = "form-control", placeholder = "Data de Nascimento" } })
+                                    @Html.ValidationMessageFor(model => model.BirthDate, "", new { @class = "text-danger" })
+
+                                </div>
+
+                                <div class="form-group">
+
+                                    @Html.EditorFor(m => m.Cpf, new { htmlAttributes = new { Id = "Cpf", @class = "form-control", placeholder = "CPF" } })
+                                    @Html.ValidationMessageFor(m => m.Cpf, "", new { @class = "text-danger" })
+
+                                </div>
+
+                                <div class="form-group">
+
+                                    @Html.EditorFor(m => m.Rg, new { htmlAttributes = new { @class = "form-control", placeholder = "RG" } })
+                                    @Html.ValidationMessageFor(m => m.Rg, "", new { @class = "text-danger" })
+
+                                </div>
+
+                                <div class="form-group">
+
+                                    @Html.EditorFor(m => m.Graduation, new { htmlAttributes = new { @class = "form-control", placeholder = "Graduação" } })
+                                    @Html.ValidationMessageFor(m => m.Graduation, "", new { @class = "text-danger" })
+
+                                </div>
+
+                                <div class="form-group">
+
+                                    @Html.EditorFor(m => m.Cep, new { htmlAttributes = new { Id = "Cep", @class = "form-control", placeholder = "CEP" } })
+                                    @Html.ValidationMessageFor(m => m.Cep, "", new { @class = "text-danger" })
+
+                                </div>
+
+                                <div class="form-group">
+
+                                    @Html.EditorFor(m => m.Address, new { htmlAttributes = new { Id = "Address", @class = "form-control", placeholder = "Endereço" } })
+                                    @Html.ValidationMessageFor(m => m.Address, "", new { @class = "text-danger" })
+
+                                </div>
+
+                                <div class="form-group">
+
+                                    @Html.EditorFor(m => m.AddressNumber, new { htmlAttributes = new { Id = "AddressNumber", @class = "form-control", placeholder = "Número" } })
+                                    @Html.ValidationMessageFor(m => m.AddressNumber, "", new { @class = "text-danger" })
+
+                                </div>
+
+                                <div class="form-group">
+
+                                    @Html.EditorFor(m => m.Nhood, new { htmlAttributes = new { Id = "Nhood", @class = "form-control", placeholder = "Bairro" } })
+                                    @Html.ValidationMessageFor(m => m.Nhood, "", new { @class = "text-danger" })
+
+                                </div>
+
+                                <div class="form-group">
+
+                                    @Html.EditorFor(m => m.City, new { htmlAttributes = new { Id = "City", @class = "form-control", placeholder = "Cidade" } })
+                                    @Html.ValidationMessageFor(m => m.City, "", new { @class = "text-danger" })
+
+                                </div>
+
+                                <div class="form-group">
+
+                                    @Html.EditorFor(m => m.State, new { htmlAttributes = new { Id = "State", @class = "form-control", placeholder = "Estado" } })
+                                    @Html.ValidationMessageFor(m => m.State, "", new { @class = "text-danger" })
+
+                                </div>
+
+                                <div class="form-group">
+
+                                    @Html.EditorFor(m => m.Country, new { htmlAttributes = new { Id = "Country", @class = "form-control", placeholder = "País" } })
+                                    @Html.ValidationMessageFor(m => m.Country, "", new { @class = "text-danger" })
+
+                                </div>
+
+                                <div class="form-group">
+
+                                    @Html.EditorFor(m => m.NewsLetter, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(m => m.NewsLetter, "", new { @class = "text-danger" })
+                                    @Html.CheckBox("ReceiveNewsletter", true)
+                                    <label for="ReceiveNewsletter" style="display:inline">Receive Newsletter?</label>
+
+                                </div>
+
+
+
+                                <div class="form-group">
+
+                                    @Html.EditorFor(m => m.Email, new { htmlAttributes = new { @class = "form-control", placeholder = "Email" } })
+                                    @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                                    @Html.EditorFor(m => m.PhoneNumber, new { htmlAttributes = new { @class = "form-control", placeholder = "Telefone" } })
+                                    @Html.ValidationMessageFor(m => m.PhoneNumber, "", new { @class = "text-danger" })
+                                </div>
+
+                                <div class="form-group">
+
+                                    @Html.EditorFor(m => m.PhoneNumber, new { htmlAttributes = new { @class = "form-control", placeholder = "Telefone" } })
+                                    @Html.ValidationMessageFor(m => m.PhoneNumber, "", new { @class = "text-danger" })
+
+                                </div>
+
+                            </div>
+
+                            // new property
+
+                            <div class="col-xs-6">
+
+                                <div class="form-group">
+
+                                    @Html.EditorFor(m => m.CellPhoneNumber, new { htmlAttributes = new { @class = "form-control", placeholder = "Celular" } })
+                                    @Html.ValidationMessageFor(m => m.CellPhoneNumber, "", new { @class = "text-danger" })
+
+                                </div>
+
+
+                                <div class="form-group">
+
+                                    @Html.EditorFor(m => m.Password, new { htmlAttributes = new { @class = "form-control", placeholder = "Senha" } })
+                                    @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+
+                                </div>
+
+                                <div class="form-group">
+
+                                    @Html.EditorFor(m => m.ConfirmPassword, new { htmlAttributes = new { @class = "form-control", placeholder = "Confirmar Senha" } })
+                                    @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })
+
+                                </div>
+
+
+                                <div class="form-group">
+                                    <div class="col-md-offset-2 col-md-10">
+                                        <input type="submit" class="btn btn-info btn-block" value="Criar conta" />
+                                    </div>
+                                </div>
+
+                            </div>
+
+                        }
+                     
+                    </div>
+
+
+
+
+                 </div> 
+
+              </div>
+
+               
+         </div>
+
+
+     </div>
+
+</section>
+
+
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+        @Scripts.Render("~/bundles/inputmask")
+
+
+        <script type="text/javascript">
 
         $(document).ready(function() {
 
@@ -227,7 +249,7 @@
                         $("#Nhood").val("...")
                         $("#City").val("...")
                         $("#State").val("...")
-                     
+
 
                         //Consulta o webservice viacep.com.br/
                         $.getJSON("//viacep.com.br/ws/"+ cep +"/json/?callback=?", function(dados) {
@@ -238,7 +260,7 @@
                                 $("#Nhood").val(dados.bairro);
                                 $("#City").val(dados.localidade);
                                 $("#State").val(dados.uf);
-                 
+
                             } //end if.
                             else {
                                 //CEP pesquisado não foi encontrado.
@@ -260,8 +282,9 @@
             });
         });
 
-</script>
+        </script>
 
-    
-	}
-}
+
+    }
+
+
