--- a/CorujaPresentation/Views/Home/Equipe.cshtml
+++ b/CorujaPresentation/Views/Home/Equipe.cshtml
@@ -78,13 +78,13 @@
                 </div>
             </div>
             <!-- //MÔNICA WEINSTEIN ================================ -->
-            <!-- CAMILA KNEIP ====================================== -->
+            <!-- RODOLFO HING ====================================== -->
             <div class="col-md-3 col-xs-6 text-center col-centered">
-                <img src="~/Content/CorujaImages/Camila.png" alt="Camila Kneip" class="team-photo" width="500" height="500">
+                <img src="~/Content/CorujaImages/Rodolfo.png" alt="Rodolfo Hing" class="team-photo" width="500" height="500">
                 <!-- Trigger the modal with a button -->
                 <button type="button" class="btn btn-info btn-team col-centered" data-toggle="modal" data-target="#myModalCK">
                     <p>
-                        <span class="team-name">Camila Kneip</span><br>
+                        <span class="team-name">Rodolfo Hing</span><br>
                         <span class="team-position">Equipe Técnica</span>
                     </p>
                 </button>
@@ -95,10 +95,10 @@
                         <div class="modal-content">
                             <div class="modal-header">
                                 <button type="button" class="close" data-dismiss="modal">×</button>
-                                <h4 class="modal-title">Camila Kneip</h4>
+                                <h4 class="modal-title">Rodolfo Hing</h4>
                             </div>
                             <div class="modal-body">
-                                <p>Psicóloga Clínica e da Saúde, com curso de extensão em Acompanhamento Terapêutico e Psicopatologia Fenômeno-Estrutural; Foi psicóloga voluntária do Ambulatório de Socialização da Psiquiatria Infantil e Adolescência do Instituto de Psiquiatria do Hospital das Clínicas da USP. </p>
+                                <p>?</p>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
@@ -107,7 +107,7 @@
                     </div>
                 </div>
             </div>
-            <!-- //CAMILA KNEIP ==================================== -->
+            <!-- //RODOLFO HING ==================================== -->
             <!-- MARINA BRAGA ====================================== -->
             <div class="col-md-3 col-xs-6 text-center col-centered">
                 <img src="~/Content/CorujaImages/Marina.png" alt="Marina Braga" class="team-photo" width="500" height="500">
@@ -296,13 +296,13 @@
                 </div>
             </div>
             <!-- //FLÁVIA CUNHA ==================================== -->
-            <!-- LEANDRO ==================================== -->
+            <!-- TOMAS ==================================== -->
             <div class="col-md-3 col-xs-6 text-center col-centered">
-                <img src="~/Content/CorujaImages/Leandro.png" alt="Leandro Mondevaim" class="team-photo" width="500" height="500">
+                <img src="~/Content/CorujaImages/Tomas.png" alt="Tomás da Silva Rangel" class="team-photo" width="500" height="500">
                 <!-- Trigger the modal with a button -->
                 <button type="button" class="btn btn-info btn-team col-centered" data-toggle="modal" data-target="#myModalLM">
                     <p>
-                        <span class="team-name">Leandro Mondevaim</span><br>
+                        <span class="team-name">Tomás da Silva Rangel</span><br>
                         <span class="team-position">Equipe Técnica</span>
                     </p>
                 </button>
@@ -313,10 +313,10 @@
                         <div class="modal-content">
                             <div class="modal-header">
                                 <button type="button" class="close" data-dismiss="modal">×</button>
-                                <h4 class="modal-title">Leandro Mondevaim</h4>
+                                <h4 class="modal-title">Tomás da Silva Rangel</h4>
                             </div>
                             <div class="modal-body">
-                                <p>Bacharel em Ciências Moleculares pela Universidade de São Paulo – USP; Mestrado em Física – Iniciação Científica em Simulação Computacional aplicada a nanomateriais; Estudos em análise de dados e modelos estatísticos para Bolsa de Valores.</p>
+                                <p>Analista Desenvolvedor C#, ASP.NET, VBA</p>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
@@ -325,7 +325,7 @@
                     </div>
                 </div>
             </div>
-            <!-- //LEANDRO ================================== -->
+            <!-- //TOMAS ================================== -->
             <!-- CHRISTIAN TAKAGI ================================== -->
             <div class="col-md-3 col-xs-6 text-center col-centered">
                 <img src="~/Content/CorujaImages/Takagi.png" alt="Christian Takagi" class="team-photo" width="500" height="500">
