--- a/CorujaPresentation/Views/Shared/_Layout.cshtml
+++ b/CorujaPresentation/Views/Shared/_Layout.cshtml
@@ -31,8 +31,6 @@
     @Scripts.Render("~/bundles/modernizr")
 
 
-    <link href="~/Content/Teste.css" rel="stylesheet" />
-
 </head>
 
 <body class="enable-animations">
@@ -165,7 +163,7 @@
 
                 <div class="row">
                     <div class="col-md-6 col-sm-6 copyright">
-                        <p> © 2016 Coruja Educação - Desenvolvido por <a target="_blank" href="https://codely.com.br/" class="footer">Codely Tecnologia</a>.</p>
+                        <p> © 2016 Coruja Educação</p>
                     </div>
                     <div class="col-md-6 col-sm-6 copyright">
                         <p class="text-right"> Icons made by <a href="http://www.freepik.com/" title="Freepik" class="footer">Freepik</a> from <a href="http://www.flaticon.com/" title="Flaticon" class="footer">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" class="footer">CC BY 3.0</a></p>
