--- a/CorujaPresentation/Views/Conta/Cadastro.cshtml
+++ b/CorujaPresentation/Views/Conta/Cadastro.cshtml
@@ -6,17 +6,15 @@
 <!-- CADASTRO	================================= -->
 <section id="Cadastro" class="section section-gray">
 
+    
     <div class="container">
-
 
         <h2 class="section-heading text-center">Conta Coruja</h2>
 
         <div class="row centered-form">
 
-    
-            <div class="col-xs-12 col-sm-8 col-md-4 col-sm-offset-2 col-md-offset-4">
+            <div class="panel-group">
 
-             
                 <div class="panel panel-default">
 
                     <div class="panel-heading">
@@ -24,29 +22,29 @@
                     </div>
 
 
-            
-
                     <div class="panel-body">
 
-                        @using (Html.BeginForm("Cadastro", "Conta", FormMethod.Post, new { @class = "", role = "form" }))
+                        @using (Html.BeginForm("Cadastro", "Conta", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                         {
                             @Html.AntiForgeryToken()
 
 
                             <div class="col-xs-6">
 
-                                <div class="form-group">
+                          
 
+                                <div class="form-group">
+                                
                                     @Html.EditorFor(m => m.FirstName, new { htmlAttributes = new { @class = "form-control input-sm", placeholder = "Nome" } })
                                     @Html.ValidationMessageFor(m => m.FirstName, "", new { @class = "text-danger" })
 
                                 </div>
 
 
-                               <div class="form-group">
+                                <div class="form-group">
 
 
-                                    @Html.EditorFor(m => m.LastName, new { htmlAttributes = new { @class = "form-control", placeholder = "Sobrenome" } })
+                                    @Html.EditorFor(m => m.LastName, new { htmlAttributes = new { @class = "form-control input-sm", placeholder = "Sobrenome" } })
                                     @Html.ValidationMessageFor(m => m.LastName, "", new { @class = "text-danger" })
 
                                 </div>
@@ -54,84 +52,84 @@
                                 <div class="form-group">
 
 
-                                    @Html.EditorFor(model => model.BirthDate, new { htmlAttributes = new { @class = "form-control", placeholder = "Data de Nascimento" } })
+                                    @Html.EditorFor(model => model.BirthDate, new { htmlAttributes = new { @class = "form-control input-sm", placeholder = "Data de Nascimento" } })
                                     @Html.ValidationMessageFor(model => model.BirthDate, "", new { @class = "text-danger" })
 
                                 </div>
 
                                 <div class="form-group">
 
-                                    @Html.EditorFor(m => m.Cpf, new { htmlAttributes = new { Id = "Cpf", @class = "form-control", placeholder = "CPF" } })
+                                    @Html.EditorFor(m => m.Cpf, new { htmlAttributes = new { Id = "Cpf", @class = "form-control input-sm", placeholder = "CPF" } })
                                     @Html.ValidationMessageFor(m => m.Cpf, "", new { @class = "text-danger" })
 
                                 </div>
 
                                 <div class="form-group">
 
-                                    @Html.EditorFor(m => m.Rg, new { htmlAttributes = new { @class = "form-control", placeholder = "RG" } })
+                                    @Html.EditorFor(m => m.Rg, new { htmlAttributes = new { @class = "form-control input-sm", placeholder = "RG" } })
                                     @Html.ValidationMessageFor(m => m.Rg, "", new { @class = "text-danger" })
 
                                 </div>
 
                                 <div class="form-group">
 
-                                    @Html.EditorFor(m => m.Graduation, new { htmlAttributes = new { @class = "form-control", placeholder = "Graduação" } })
+                                    @Html.EditorFor(m => m.Graduation, new { htmlAttributes = new { @class = "form-control input-sm", placeholder = "Graduação" } })
                                     @Html.ValidationMessageFor(m => m.Graduation, "", new { @class = "text-danger" })
 
                                 </div>
 
                                 <div class="form-group">
 
-                                    @Html.EditorFor(m => m.Cep, new { htmlAttributes = new { Id = "Cep", @class = "form-control", placeholder = "CEP" } })
+                                    @Html.EditorFor(m => m.Cep, new { htmlAttributes = new { Id = "Cep", @class = "form-control input-sm", placeholder = "CEP" } })
                                     @Html.ValidationMessageFor(m => m.Cep, "", new { @class = "text-danger" })
 
                                 </div>
 
                                 <div class="form-group">
 
-                                    @Html.EditorFor(m => m.Address, new { htmlAttributes = new { Id = "Address", @class = "form-control", placeholder = "Endereço" } })
+                                    @Html.EditorFor(m => m.Address, new { htmlAttributes = new { Id = "Address", @class = "form-control input-sm", placeholder = "Endereço" } })
                                     @Html.ValidationMessageFor(m => m.Address, "", new { @class = "text-danger" })
 
                                 </div>
 
                                 <div class="form-group">
 
-                                    @Html.EditorFor(m => m.AddressNumber, new { htmlAttributes = new { Id = "AddressNumber", @class = "form-control", placeholder = "Número" } })
+                                    @Html.EditorFor(m => m.AddressNumber, new { htmlAttributes = new { Id = "AddressNumber", @class = "form-control input-sm", placeholder = "Número" } })
                                     @Html.ValidationMessageFor(m => m.AddressNumber, "", new { @class = "text-danger" })
 
                                 </div>
 
                                 <div class="form-group">
 
-                                    @Html.EditorFor(m => m.Nhood, new { htmlAttributes = new { Id = "Nhood", @class = "form-control", placeholder = "Bairro" } })
+                                    @Html.EditorFor(m => m.Nhood, new { htmlAttributes = new { Id = "Nhood", @class = "form-control input-sm", placeholder = "Bairro" } })
                                     @Html.ValidationMessageFor(m => m.Nhood, "", new { @class = "text-danger" })
 
                                 </div>
 
                                 <div class="form-group">
 
-                                    @Html.EditorFor(m => m.City, new { htmlAttributes = new { Id = "City", @class = "form-control", placeholder = "Cidade" } })
+                                    @Html.EditorFor(m => m.City, new { htmlAttributes = new { Id = "City", @class = "form-control input-sm", placeholder = "Cidade" } })
                                     @Html.ValidationMessageFor(m => m.City, "", new { @class = "text-danger" })
 
                                 </div>
 
                                 <div class="form-group">
 
-                                    @Html.EditorFor(m => m.State, new { htmlAttributes = new { Id = "State", @class = "form-control", placeholder = "Estado" } })
+                                    @Html.EditorFor(m => m.State, new { htmlAttributes = new { Id = "State", @class = "form-control input-sm", placeholder = "Estado" } })
                                     @Html.ValidationMessageFor(m => m.State, "", new { @class = "text-danger" })
 
                                 </div>
 
                                 <div class="form-group">
 
-                                    @Html.EditorFor(m => m.Country, new { htmlAttributes = new { Id = "Country", @class = "form-control", placeholder = "País" } })
+                                    @Html.EditorFor(m => m.Country, new { htmlAttributes = new { Id = "Country", @class = "form-control input-sm", placeholder = "País" } })
                                     @Html.ValidationMessageFor(m => m.Country, "", new { @class = "text-danger" })
 
                                 </div>
 
                                 <div class="form-group">
 
-                                    @Html.EditorFor(m => m.NewsLetter, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.EditorFor(m => m.NewsLetter, new { htmlAttributes = new { @class = "form-control input-sm" } })
                                     @Html.ValidationMessageFor(m => m.NewsLetter, "", new { @class = "text-danger" })
                                     @Html.CheckBox("ReceiveNewsletter", true)
                                     <label for="ReceiveNewsletter" style="display:inline">Receive Newsletter?</label>
@@ -142,15 +140,14 @@
 
                                 <div class="form-group">
 
-                                    @Html.EditorFor(m => m.Email, new { htmlAttributes = new { @class = "form-control", placeholder = "Email" } })
+                                    @Html.EditorFor(m => m.Email, new { htmlAttributes = new { @class = "form-control input-sm", placeholder = "Email" } })
                                     @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-                                    @Html.EditorFor(m => m.PhoneNumber, new { htmlAttributes = new { @class = "form-control", placeholder = "Telefone" } })
-                                    @Html.ValidationMessageFor(m => m.PhoneNumber, "", new { @class = "text-danger" })
+                                   
                                 </div>
 
                                 <div class="form-group">
 
-                                    @Html.EditorFor(m => m.PhoneNumber, new { htmlAttributes = new { @class = "form-control", placeholder = "Telefone" } })
+                                    @Html.EditorFor(m => m.PhoneNumber, new { htmlAttributes = new { @class = "form-control input-sm", placeholder = "Telefone" } })
                                     @Html.ValidationMessageFor(m => m.PhoneNumber, "", new { @class = "text-danger" })
 
                                 </div>
@@ -163,7 +160,7 @@
 
                                 <div class="form-group">
 
-                                    @Html.EditorFor(m => m.CellPhoneNumber, new { htmlAttributes = new { @class = "form-control", placeholder = "Celular" } })
+                                    @Html.EditorFor(m => m.CellPhoneNumber, new { htmlAttributes = new { @class = "form-control input-sm", placeholder = "Celular" } })
                                     @Html.ValidationMessageFor(m => m.CellPhoneNumber, "", new { @class = "text-danger" })
 
                                 </div>
@@ -171,14 +168,14 @@
 
                                 <div class="form-group">
 
-                                    @Html.EditorFor(m => m.Password, new { htmlAttributes = new { @class = "form-control", placeholder = "Senha" } })
+                                    @Html.EditorFor(m => m.Password, new { htmlAttributes = new { @class = "form-control input-sm", placeholder = "Senha" } })
                                     @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
 
                                 </div>
 
                                 <div class="form-group">
 
-                                    @Html.EditorFor(m => m.ConfirmPassword, new { htmlAttributes = new { @class = "form-control", placeholder = "Confirmar Senha" } })
+                                    @Html.EditorFor(m => m.ConfirmPassword, new { htmlAttributes = new { @class = "form-control input-sm", placeholder = "Confirmar Senha" } })
                                     @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })
 
                                 </div>
@@ -193,18 +190,15 @@
                             </div>
 
                         }
-                     
+
                     </div>
 
 
+                </div>
 
+            </div>
 
-                 </div> 
-
-              </div>
-
-               
-         </div>
+          </div>
 
 
      </div>
